--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(extract_elo_b)
 export(plot_scores)
 export(plot_scores_longitudinal)
 export(prep_seq)
+importFrom(EloRating,randomsequence)
 importFrom(EloRating,seqcheck)
 importFrom(Rdpack,reprompt)
 importFrom(cmdstanr,cmdstan_model)
