--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,11 +14,11 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Depends:
     R (>= 4.0.0),
-    cmdstanr,
-    EloRating
+    cmdstanr
 Imports:
   posterior,
-  Rdpack
+  Rdpack,
+  EloRating
 Suggests: 
     knitr,
     rmarkdown,
