fix vignette for Windows and update readme

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(convert_presence)
 export(date2index)
 export(elo_seq_bayes)
 export(extract_elo_b)
+export(find_origin)
 export(plot_scores)
 export(plot_scores_longitudinal)
 export(prep_seq)
