--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,11 @@ export(date2index)
 export(elo_seq_bayes)
 export(extract_elo_b)
 export(find_origin)
+export(generate_interactions)
+export(longitudinal_steepness)
 export(plot_scores)
 export(plot_scores_longitudinal)
+export(plot_steepness_longitudinal)
 export(prep_seq)
 importFrom(EloRating,randomsequence)
 importFrom(EloRating,seqcheck)
