--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,11 +7,13 @@ export(elo_seq_bayes)
 export(extract_elo_b)
 export(find_origin)
 export(generate_interactions)
+export(group_mixture)
 export(longitudinal_steepness)
 export(plot_scores)
 export(plot_scores_longitudinal)
 export(plot_steepness_longitudinal)
 export(prep_seq)
+export(presence_with_migrations)
 importFrom(EloRating,randomsequence)
 importFrom(EloRating,seqcheck)
 importFrom(Rdpack,reprompt)
@@ -28,8 +30,14 @@ importFrom(graphics,segments)
 importFrom(graphics,text)
 importFrom(graphics,title)
 importFrom(posterior,as_draws_matrix)
+importFrom(stats,coef)
 importFrom(stats,density)
+importFrom(stats,lm)
 importFrom(stats,median)
+importFrom(stats,na.omit)
 importFrom(stats,quantile)
+importFrom(stats,rbinom)
+importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(utils,capture.output)
+importFrom(utils,combn)
