--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,10 @@ export(longitudinal_steepness)
 export(plot_scores)
 export(plot_scores_longitudinal)
 export(plot_steepness_longitudinal)
+export(pp_check)
 export(prep_seq)
 export(presence_with_migrations)
+export(toydata)
 importFrom(EloRating,randomsequence)
 importFrom(EloRating,seqcheck)
 importFrom(Rdpack,reprompt)
@@ -24,6 +26,8 @@ importFrom(grDevices,grey)
 importFrom(grDevices,hcl.colors)
 importFrom(graphics,axis)
 importFrom(graphics,axis.Date)
+importFrom(graphics,box)
+importFrom(graphics,mtext)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
 importFrom(graphics,segments)
