predict function for unobserved interactions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(plot_scores)
 export(plot_scores_longitudinal)
 export(plot_steepness_longitudinal)
 export(pp_check)
+export(predict_new_outcome)
 export(prep_seq)
 export(presence_with_migrations)
 export(toydata)
