prep_seq_sport for home advantage model

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(plot_steepness_longitudinal)
 export(pp_check)
 export(predict_new_outcome)
 export(prep_seq)
+export(prep_seq_sport)
 export(presence_with_migrations)
 export(toydata)
 importFrom(EloRating,randomsequence)
