group split simulation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(predict_new_outcome)
 export(prep_seq)
 export(prep_seq_sport)
 export(presence_with_migrations)
+export(sim_group_split)
 export(toydata)
 importFrom(EloRating,randomsequence)
 importFrom(EloRating,seqcheck)
