new data generation function
starting from start ratings, yeah

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(predict_new_outcome)
 export(prep_seq)
 export(prep_seq_sport)
 export(presence_with_migrations)
+export(principled_interactions)
 export(sim_group_split)
 export(toydata)
 importFrom(EloRating,randomsequence)
@@ -35,7 +36,9 @@ importFrom(graphics,arrows)
 importFrom(graphics,axis)
 importFrom(graphics,axis.Date)
 importFrom(graphics,box)
+importFrom(graphics,legend)
 importFrom(graphics,mtext)
+importFrom(graphics,par)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
 importFrom(graphics,segments)
