overhauling principled_interactions()
add 'rank changes'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ export(generate_interactions)
 export(group_mixture)
 export(list_stan_foos)
 export(longitudinal_steepness)
+export(make_rating_grid)
+export(plot_principled)
 export(plot_scores)
 export(plot_scores_longitudinal)
 export(plot_steepness_longitudinal)
@@ -21,6 +23,7 @@ export(prep_seq)
 export(prep_seq_sport)
 export(presence_with_migrations)
 export(principled_interactions)
+export(rating_drift)
 export(sim_group_split)
 export(toydata)
 importFrom(EloRating,randomsequence)
