--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(convert_presence)
 export(date2index)
 export(elo_seq_bayes)
 export(extract_elo_b)
+export(find_extract_index)
 export(find_origin)
 export(generate_interactions)
 export(group_mixture)
@@ -58,5 +59,6 @@ importFrom(stats,quantile)
 importFrom(stats,rbinom)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
+importFrom(stats,sd)
 importFrom(utils,capture.output)
 importFrom(utils,combn)
