new helper function
last_interaction

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,11 @@ export(date2index)
 export(elo_seq_bayes)
 export(extract_elo_b)
 export(find_extract_index)
+export(find_extract_index2)
 export(find_origin)
 export(generate_interactions)
 export(group_mixture)
+export(last_interaction)
 export(list_stan_foos)
 export(longitudinal_steepness)
 export(make_rating_grid)
